========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-05-01

  - Added patch for clean build for lexer. 2.6.1 results in a build warning.

  - Merged PR73 (Ethan Glasser-Camp) - Cleanups to lexer and more restrictive
    syntax for comments within a transaction's indented block.

  - Fixed failing test re. new grammar.

  - Merged PR29: Update grammar to allow comments in the middle of transactions
    (Ethan Glasser-Camp).

  - Merged PR71: Use enhanced extract method which passes existing entries
    (Patrick Ruckstuhl).


2018-04-29

  - Added polymorphic POSSIGN(_, account) function to the SQL shell in order to
    support correcting for per-account sign.

  - Implemented polymorphic NEG() function in the SQL shell, which works on
    instances of Decimal, Amount, Position, Inventory.

  - Changed the SQL shell's operators to dispatch to Python's default operator
    selection instead of coercing to Decimal instances.


2018-04-28

  - Added QUARTER() function to the SQL shell.
    (See https://groups.google.com/d/msg/beancount/fTlSnQRPayo/1yN8zd76AAAJ.)

  - Updated version of flex on Ubuntu (2.6.1) generates warnings. Fixed a few.
    But Beancount now fails on account names with a dash inthyem; added a test
    for those. (The lexer is not the issue; I suspect a bison update from 4/17.)


2018-04-18

  - Fixed #157: Building a price map with zero prices should not fail,
    especially when done accidentally.

  - Fixed #264: Converted zip compression in bake from using an external zip
    tool to using the 'zipfile' module packaged with Python. I'm doing this to
    fix the CI build as well.


2018-04-17

  - Fixed #265: Refined the timezone specification of the price sources. In
    doing this, I documented it in the beancount.prices.source module and now
    pass in a timezone-aware datetime instance instead of a date, and the source